# data-science-assignment

./: .gitignore  README.md  main.py  pricing_optimization_analysis.ipynb  pyproject.toml
.github/: copilot-instructions.md  dataset-glossary.md
results/: Analysis.xlsx  Output Document.docx  regression_results.csv
