[project]
name = "data-science-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "pyarrow>=12.0.1",
    "scipy>=1.11.3",
    "pandas>=2.1.4",
    "openpyxl>=3.1.3",
    "polars-ds>=0.10.1",
]
